@@ -1,3 +1,8 @@
+Fri Aug 29 17:06:11 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
+	* src/odbc/odbc.c src/odbc/unittests/Makefile.am:
+	* src/odbc/unittests/getdata.c(added):
+	- fix a core getting text with SQLGetData
+
 Fri Aug 29 16:17:25 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
 	* include/tdsodbc.h src/odbc/odbc.c:
 	- remove _sql_bind_info structure, use ARD instead
